[package]
name = "chat-reseau"
version = "0.5.7"
authors = ["Lucien Cartier-Tilet <drakpa@drakpa.fr>"]

[dependencies]
colored = "1.6"
chrono = "0.4"
term_size = "0.3"
gio = "^0"
gdk = "^0"
gtk = "^0"

[features]
gtk_3_10 = ["gtk/v3_10"]
gtk_3_16 = ["gtk_3_10", "gtk/v3_16"]
gtk_3_18 = ["gtk_3_16", "gtk/v3_18"] #for CI tools
gtk_3_20 = ["gtk_3_18", "gtk/v3_20"] #for CI tools
gtk_3_22 = ["gtk_3_20", "gtk/v3_22"] #for CI tools
